--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div id="price-img-people" class="price-img"></div>
     </div>
     <div class="gift-section">
-        <h2 class="gift-title">See You Next Year 🥳</h2>
-        <h3 class="gift-hint">(Hover over the gift)</h3>
+        <h2 class="gift-title-last">See You Next Year 🥳</h2>
+        <h3 class="gift-hint-last">(Hover over the gift)</h3>
         <div id="price-img-cheers" class="price-img"></div>
     </div>
     <p id="footer">Want to create your own Birthday GIFt site? Take <a href="https://scrimba.com/learn/htmlandcss" target="_blank">this HTML & CSS course.</a></p>
